# ragent

./: .gitignore  README.md
ragent/: Cargo.toml  rustfmt.toml
ragent/src/: agent.rs  client.rs  describable.rs  lib.rs  tool.rs  utils.rs  workable.rs
ragent/src/clients/: anthropic.rs  openai.rs
ragent/src/tools/: adder.rs
ragent_test/: Cargo.toml  rustfmt.toml
ragent_test/src/: adder.rs  main.rs
