[package]
name = "ragent_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
futures = "0.3.31"
qdrant-client = "1.12.1"
ragent = { path = "../ragent" }
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
